# EigenExt

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.conan  Makefile  README.md  WORKSPACE  conanfile.py
.circleci/: config.yml
EigenExt/: BUILD.bazel  sparse_shape.h  sparse_tensor.h  sparse_tensor_assign.h  sparse_tensor_broadcast.h  sparse_tensor_buffer.h  sparse_tensor_cast.h  sparse_tensor_chip.h  sparse_tensor_contract.h  sparse_tensor_convolve.h  sparse_tensor_cwise_binary.h  sparse_tensor_cwise_unary.h  sparse_tensor_dst.h  sparse_tensor_pad.h  sparse_tensor_reduce.h  sparse_tensor_reverse.h  sparse_tensor_scatter.h  sparse_tensor_select.h  sparse_tensor_shuffle.h  sparse_tensor_slice.h  sparse_tensor_src.h  sparse_tensor_stride.h  sparse_util.h
EigenExt/mutation/: common.hpp  main.cpp  test_contract.cpp  test_transform.cpp
EigenExt/test/: test_sparse_assign.cpp  test_sparse_broadcast.cpp  test_sparse_buffer.cpp  test_sparse_chip.cpp  test_sparse_contract.cpp  test_sparse_convolve.cpp  test_sparse_cwise_binary.cpp  test_sparse_cwise_unary.cpp  test_sparse_dst.cpp  test_sparse_pad.cpp  test_sparse_reduce.cpp  test_sparse_reverse.cpp  test_sparse_scatter.cpp  test_sparse_select.cpp  test_sparse_shuffle.cpp  test_sparse_slice.cpp  test_sparse_src.cpp  test_sparse_stride.cpp
experimental/: sparse_csf.h
experimental/test/: test_sparse_csf.cpp
scripts/: coverage.sh  tests.sh
